--- a/.ebextensions/02artisan.config
+++ b/.ebextensions/02artisan.config
@@ -1,3 +1,3 @@
 container_commands:
     01migrateSeed:
-        command: "php artisan migrate --force --seed"
+        command: "php artisan migrate --force"
