--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/tinker": "^1.0",
         "tymon/jwt-auth": "1.0.*",
         "dingo/api": "^2",
-        "barryvdh/laravel-cors": "0.11.*"
+        "barryvdh/laravel-cors": "0.11.*",
+        "laravel-notification-channels/onesignal": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
