--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "tymon/jwt-auth": "1.0.*",
         "dingo/api": "^2",
         "barryvdh/laravel-cors": "0.11.*",
-        "laravel-notification-channels/onesignal": "^1.1"
+        "laravel-notification-channels/onesignal": "^1.1",
+        "league/flysystem-aws-s3-v3": "~1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
